Modifications to the final File

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </tbody>
 </table>
   
-Sum: <p data-bind="text: sum"></p>   
+<p data-bind="text: sum"></p>   
     
     <script src="bower_components/jquery/dist/jquery.js"> </script>
     <script src="bower_components/knockout/dist/knockout.js"> </script>
-    <script src="start.js"> </script>
+    <script src="finish.js"> </script>
   
   </body>
 </html>
