Modifications to names

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <body>  
       <fieldset>
           <label>
-              <input type="radio" name="sector" value="martinb" data-bind="checked: chosenSector" />Apple</label>
+              <input type="radio" name="sector" value="martinb" data-bind="checked: chosenSector" />Martin Beeby</label>
           <label>
-              <input type="radio" name="sector" value="martink" data-bind="checked: chosenSector" />Microsoft</label>
+              <input type="radio" name="sector" value="martink" data-bind="checked: chosenSector" />Martin Kearn</label>
       </fieldset>
       
 <h1>Gross Revenue 2015-2020</h1>
