--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <script src="bower_components/jquery/dist/jquery.js"> </script>
     <script src="bower_components/knockout/dist/knockout.js"> </script>
-    <script src="finish.js"> </script>
+    <script src="start.js"> </script>
   
   </body>
 </html>
